# MeshBoolean

./: .clang-format  .gitignore  CMakeLists.txt  ball_tree.hh  ball_tree2.hh  boolean.cc  boolean2.cc  bvh.cc  bvh.hh  bvh2.hh  bvh_point_query.hh  common.hh  meshboolean.cc  meshio.hh  non_copyable.hh  partition_playground.cc  segment_segment_intersection_2d.hh  statistics.hh  timers.hh  unique_points.cc  vec3.hh
BVH/: aabb.asm  aabb.hh  barycentric.hh  bvh.cc  bvh.hh  common.hh  node.hh  query_point.cc  query_point.hh  segment.hh  segment_aabb_intersection.hh  segment_bvh_intersection.hh  segment_segment_intersection_2d.hh  segment_triangle_intersection.hh  triangle.hh
meshio/: fread_e.hh  stl_binary_reader.hh  stl_binary_triangle.hh  stl_binary_writer.hh  tri_ascii_reader.hh
meshio/stl/: stl_binary_reader.hh  stl_binary_triangle.hh  stl_binary_writer.hh
